docs: delete user
